# MCP_server_For_ZOHO_ANALYTICS

./: README.md  column.py  pyproject.toml  requirements.txt  server.py
src/: auth.py  chart_viewer.html  config.py  tools.py
src/utils/: zoho_client.py
