[project]
name = "zoho-analytics-mcp-edit"
version = "1.0.0"
description = "Zoho Analytics MCP Server with create + edit chart tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
